# ncpwsafe

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  config.h.in  vcpkg.json
.devcontainer/: Dockerfile  Dockerfile.fedora  Dockerfile.ubuntu  devcontainer.json
.github/workflows/: cmake-multi-platform.yml
CMakeModules/: FindNcurses.cmake
cmake/: ResolveDependencies.cmake
src/: AccountDb.cpp  AccountDb.h  AccountDetailsDlg.cpp  AccountDetailsDlg.h  AccountRecord.cpp  AccountRecord.h  AccountRecords.cpp  AccountRecords.h  AccountsColl.cpp  AccountsColl.h  AccountsWin.cpp  AccountsWin.h  Action.h  CMakeLists.txt  ChangeDbPasswordCommand.cpp  ChangeDbPasswordCommand.h  ChangeDbPasswordDlg.cpp  ChangeDbPasswordDlg.h  ChangePasswordDlg.cpp  ChangePasswordDlg.h  CommandBarWin.cpp  CommandBarWin.h  Dialog.cpp  Dialog.h  ExportDbCommand.cpp  ExportDbCommand.h  FileUtils.cpp  FileUtils.h  Filesystem.cpp  Filesystem.h  GeneratePasswordCommand.cpp  GeneratePasswordCommand.h  GeneratePasswordDlg.cpp  GeneratePasswordDlg.h  GenerateTestDbCommand.cpp  GenerateTestDbCommand.h  Label.h  MessageBox.cpp  MessageBox.h  PWSafeApp.cpp  (+25 more)
test/: AccountDb-tests.cpp  CMakeLists.txt  PWSafeApp-tests.cpp  Utils-tests.cpp
